// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Map /> tests Readonly mode works 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div>
          <div
            class="bp3-card bp3-elevation-0 Card--card"
            style="width: 100%;"
          >
            <div
              class="group withoutAligning"
            >
              <div
                style="flex-grow: 1;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  keyLabel
                </p>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group bp3-disabled"
                  >
                    <input
                      class="bp3-input"
                      data-testid="key-test-[0]"
                      disabled=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                style="flex-grow: 1;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  valueLabel
                </p>
                <div
                  class="group withoutAligning withoutSpacing"
                >
                  <div
                    class="TextInput--main"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        class="bp3-input"
                        data-testid="value-test-[0]"
                        disabled=""
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Map /> tests Should render properly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div>
          <div
            class="bp3-card bp3-elevation-0 Card--card"
            style="width: 100%;"
          >
            <div
              class="group withoutAligning"
            >
              <div
                style="flex-grow: 1;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  keyLabel
                </p>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      data-testid="key-test-[0]"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                style="flex-grow: 1;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  valueLabel
                </p>
                <div
                  class="group withoutAligning withoutSpacing"
                >
                  <div
                    class="TextInput--main"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        class="bp3-input"
                        data-testid="value-test-[0]"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-testid="remove-test-[0]"
                    style="margin-top: 4px;"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="main-trash"
                    >
                      <svg
                        height="20"
                        viewBox="0 0 16 20"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
              data-testid="add-test"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                plusAdd
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
